--- a/app/assets/stylesheets/_welcome.css.scss
+++ b/app/assets/stylesheets/_welcome.css.scss
@@ -24,7 +24,7 @@ $gray:  #2a2a2a;
   justify-content: center;
   padding-top: 10px;
   padding-bottom: 5px;
-  border-bottom: 1px solid $border;
+
   .thumbnail {
     overflow: hidden;
     width: 30%;
@@ -38,7 +38,7 @@ $gray:  #2a2a2a;
   }
     .image_thumbnail {
       width: 100%;
-      height: 60%;
+      height: 200px;
       object-fit: cover;
       z-index: 1;
       position: relative;
@@ -58,6 +58,8 @@ $gray:  #2a2a2a;
       padding: 20px;
       background-color: transparentize($gray, 0.4);
       width: 100%;
+      overflow: hidden;
+      height: 100px;
       a {
         color: white;
       }
@@ -89,11 +91,30 @@ $gray:  #2a2a2a;
   }
 }
 
-.about {
-  padding: 0 7.5% 0 0;
-  a {
-    color: $highlight;
-    font-weight: 700;
-    text-decoration: none;
+@media (max-width: 500px) {
+  body {
+    .col-2 {
+      .thumbnail {
+        width: 100%;
+        margin: 0;
+        margin-bottom: 10px;
+
+        .article_title {
+          height: 60px;
+          overflow: hidden;
+          white-space: nowrap;
+          color: white;
+          text-overflow: ellipsis;
+          a {
+            width: 50px;
+          }
+        }
+
+        .date {
+          display: none;
+        }
+      }
+    }
   }
+
 }
