--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -17,8 +17,18 @@
 <%= f.label :content, "Write your article here" %><br>
 <%= f.text_area :content %>
 
-<br><%= f.label :title %><br>
+<br><%= f.label :image, "Image URL" %><br>
 <%= f.text_field :image %>
+
+<br><%= f.label :category %><br>
+<%= f.text_field :category %>
+
+<br><%= f.label :meta_description %><br>
+<%= f.text_field :meta_description %>
+
+<br><%= f.label :keywords %><br>
+<%= f.text_field :keywords %>
+
 <br><%= f.submit %>
 
 <% end %>
