--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -1,10 +1,9 @@
-.post_image {
-  width: 100px;
-  margin-top: 8px;
-  border-radius: 50%;
-  object-fit: cover;
-}
+@import url('https://fonts.googleapis.com/css?family=Pacifico');
 
+.posts_hr {
+  margin: auto;
+  margin-top: 20px;
+}
 
 #posts_wrapper {
   padding: 3em 0;
@@ -27,29 +26,48 @@
         }
       }
     }
-    hr {
-      margin: 3em auto;
+  }
+}
+
+.flex--container--post--title {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 300px;
+  margin-top: -10px;
+  z-index: 100;
+  position: relative;
+
+  header {
+    text-align: center;
+    background-color: white;
+    width: 80%;
+    max-width: 400px;
+    max-height: 280px;
+    margin-left: auto;
+    margin-right: auto;
+
+    .date {
+      font-size: 1.2em;
+      color: #00b5f9;
+      padding-bottom: 10px;
+      font-family: 'Roboto Condensed', sans-serif;
+    }
+    h1 {
+      margin-bottom: 0;
+      padding: 10px;
+      color: #2b2b2b;
+      font-family: 'Roboto Condensed', sans-serif;
     }
   }
 }
 
 // --------------- Posts Show
 
-#post_show_content {
-  header {
-    text-align: center;
-    .date {
-      font-size: .9em;
-      color: $light;
-      margin-top: 50px;
-    }
-    h1 {
-      margin: 0;
-    }
-  }
-  hr {
-    margin: 3em auto;
-  }
+hr {
+  margin: 3em auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #share_box {
