--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -29,13 +29,6 @@ body {
   width: 700px;
 }
 
-.toggle_menu {
-  padding: 15px 20px 15px 20px;
-  margin-top: 30px;
-  position: absolute;
-  cursor: pointer;
-}
-
 .sidebar_menu {
   background-color: #2b2b2b;
   margin-left: 0;
@@ -43,7 +36,7 @@ body {
   width: 250px;
   height: 100vh;
   position: fixed;
-  z-index: 10000000;
+  z-index: 90000000;
   transition: all 0.3s ease-in-out;
 }
 
@@ -315,12 +308,12 @@ body {
   width: 100%;
 
   .logo--flex {
-    .nav-image {
-      width: 35px;
-      height: 25px;
-      margin-top: 40px;
-      margin-left: 40px;
+    .fa-bars {
+      transform: scale(1.5,1);
+      padding: 40px;
       position: absolute;
+      cursor: pointer;
+      z-index: 10000000;
     }
 
     .name {
@@ -334,8 +327,8 @@ body {
   }
 
   nav {
-    border-top: 2px solid $border;
-    border-bottom: 2px solid $border;
+    border-top: 1px solid $border;
+    border-bottom: 1px solid $border;
     margin-top: 0px;
     background-color: white;
     position: relative;
@@ -623,6 +616,9 @@ hr {
         margin-left: 6%;
         width: 20px;
         height: 20px;
+      }
+      .fa-bars {
+        padding: 20px;
       }
       .name {
         margin-top: 10px;
